# openfahrplan

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml
data/mapping/: mapping.parquet
data/parquet/vgn/: agency.parquet  calendar.parquet  calendar_dates.parquet  routes.parquet  stops.parquet  transfers.parquet  trips.parquet
hack/: info.py
src/: app.py  main.py  utils.py
src/assets/: location.js
src/init/: feed.py
src/lib/: lib.py
src/openfahrplan/: __init__.py  __main__.py
src/openfahrplan/assets/: style.css
src/openfahrplan/lib/: debug.py  display.py  disruptions.py  gtfs.py  raptor.py
src/openfahrplan/pages/: connection.py  disruptions.py  explore.py  home.py  line.py  lines.py  routes.py  stations.py  transfers.py
src/pages/: explore.py  home.py  location.py  map.py
tests/: test_display.py  test_gtfs_lib.py  test_routing.py  test_sorting.py
