[project]
name = "openfahrplan"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Richter",email = "me@danielrichter.codes"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [{ include = "src" }]
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "gtfs-kit (>=10.3.1,<11.0.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)",
    "dash (>=3.2.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "openai (>=1.107.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
